--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-modName = MyMod
+modName = QuantumSoundMuffler
 
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
-modId = mymodid
+modId = quantumsoundmuffler
 
-modGroup = com.myname.mymodid
+modGroup = com.cleanroommc.quantumsoundmuffler
 
 # WHY is there no version field?
 # The build script relies on git to provide a version via tags. It is super easy and will enable you to always know the
@@ -37,7 +37,7 @@ enableModernJavaSyntax = true
 enableGenericInjection = false
 
 # Generate a class with String fields for the mod id, name, version and group name named with the fields below
-generateGradleTokenClass = com.myname.mymodid.Tags
+generateGradleTokenClass = com.cleanroommc.quantumsoundmuffler.Tags
 gradleTokenModId = MODID
 gradleTokenModName = MODNAME
 gradleTokenVersion = VERSION
@@ -61,17 +61,17 @@ apiPackage =
 accessTransformersFile =
 
 # Provides setup for Mixins if enabled. If you don't know what mixins are: Keep it disabled!
-usesMixins = false
+usesMixins = true
 # Adds some debug arguments like verbose output and export
 usesMixinDebug = false
 # Specify the location of your implementation of IMixinConfigPlugin. Leave it empty otherwise.
 mixinPlugin =
 # Specify the package that contains all of your Mixins. You may only place Mixins in this package or the build will fail!
-mixinsPackage =
+mixinsPackage = mixins
 # Specify the core mod entry class if you use a core mod. This class must implement IFMLLoadingPlugin!
 # This parameter is for legacy compatibility only
 # Example value: coreModClass = asm.FMLPlugin + modGroup = com.myname.mymodid -> com.myname.mymodid.asm.FMLPlugin
-coreModClass =
+coreModClass = core.QuantumSoundMufflerCore
 # If your project is only a consolidation of mixins or a core mod and does NOT contain a 'normal' mod ( = some class
 # that is annotated with @Mod) you want this to be true. When in doubt: leave it on false!
 containsMixinsAndOrCoreModOnly = false
